# code_challenge_generator_by_jaz

./: README.gemini.md  README.md
backend/: example.db  pyproject.toml  verify_db.py
backend/src/: .env  ai_generator.py  app.py  utils.py
backend/src/database/: db.py  models.py
backend/src/routes/: challenge.py  webhooks.py
frontend/: .env  index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/auth/: Authentication.jsx  clerkProviderWithRoutes.jsx
frontend/src/challenge/: ChallengeGenerator.jsx  MCQChallenge.jsx
frontend/src/history/: HistoryPanel.jsx
frontend/src/layout/: layout.jsx
frontend/src/utils/: api.js
